--- a/todoListApi/package.json
+++ b/todoListApi/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "todolistapi",
+  "name": "check-id-backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -12,9 +12,10 @@
     "nodemon": "^1.18.6"
   },
   "dependencies": {
-    "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "node-rekognition": "^0.4.0"
+    "multer": "^1.4.1",
+    "node-rekognition": "^0.4.0",
+    "path": "^0.12.7"
   },
   "start": "nodemon server.js"
 }
