--- a/todoListApi/package.json
+++ b/todoListApi/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "express": "^4.16.4",
+    "filereader": "^0.10.3",
     "multer": "^1.4.1",
     "node-rekognition": "^0.4.0",
     "path": "^0.12.7"
